--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ attrs==21.4.0
     # via
     #   fiona
     #   rasterio
-backoff==2.0.1
+backoff==2.1.2
     # via -r requirements.in
-certifi==2021.10.8
+certifi==2022.6.15
     # via
     #   fiona
     #   pyproj
@@ -35,13 +35,13 @@ cligj==0.7.2
     # via
     #   fiona
     #   rasterio
-colorama==0.4.4
+colorama==0.4.5
     # via kiwi-structlog-config
 fiona==1.8.21
     # via geopandas
-geojson-pydantic==0.3.4
+geojson-pydantic==0.4.2
     # via -r requirements.in
-geopandas==0.10.2
+geopandas==0.11.0
     # via -r requirements.in
 greenlet==1.1.2
     # via sqlalchemy
@@ -51,23 +51,26 @@ kiwi-structlog-config==0.1.8
     # via -r requirements.in
 munch==2.5.0
     # via fiona
-numpy==1.22.3
+numpy==1.23.0
     # via
     #   h5py
     #   pandas
     #   rasterio
     #   snuggs
-pandas==1.4.2
+packaging==21.3
     # via geopandas
-pg8000==1.26.1
+pandas==1.4.3
+    # via geopandas
+pg8000==1.29.1
     # via -r requirements.in
-pydantic==1.9.0
+pydantic==1.9.1
     # via
     #   -r requirements.in
     #   geojson-pydantic
 pyparsing==3.0.9
     # via
     #   -r requirements.in
+    #   packaging
     #   snuggs
 pyproj==3.3.1
     # via geopandas
@@ -83,7 +86,7 @@ rasterio==1.2.10
     # via -r requirements.in
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.5.12
+sentry-sdk==1.6.0
     # via
     #   -r requirements.in
     #   structlog-sentry
@@ -96,9 +99,11 @@ six==1.16.0
     #   fiona
     #   h5py
     #   python-dateutil
+slack-sdk==3.17.2
+    # via -r requirements.in
 snuggs==1.4.7
     # via rasterio
-sqlalchemy==1.4.36
+sqlalchemy==1.4.39
     # via -r requirements.in
 structlog==21.5.0
     # via
@@ -106,7 +111,7 @@ structlog==21.5.0
     #   kiwi-structlog-config
 structlog-sentry==1.4.0
     # via -r requirements.in
-typing-extensions==4.2.0
+typing-extensions==4.3.0
     # via pydantic
 urllib3==1.26.9
     # via sentry-sdk
