--- a/batch/docker/requirements.txt
+++ b/batch/docker/requirements.txt
@@ -10,18 +10,18 @@ affine==2.3.1
     # via rasterio
 asn1crypto==1.5.1
     # via scramp
-attrs==21.4.0
+attrs==22.1.0
     # via
     #   fiona
     #   jsonschema
     #   rasterio
-awscli==1.25.34
+awscli==1.25.63
     # via -r ./batch/docker/requirements.in
 backoff==2.1.2
     # via -r ./batch/docker/requirements.in
-boto3==1.24.34
+boto3==1.24.62
     # via -r ./batch/docker/requirements.in
-botocore==1.27.34
+botocore==1.27.62
     # via
     #   awscli
     #   boto3
@@ -61,9 +61,9 @@ fiona==1.8.21
     #   geopandas
 geojson-pydantic==0.4.3
     # via -r ./batch/docker/requirements.in
-geopandas==0.11.0
+geopandas==0.11.1
     # via -r ./batch/docker/requirements.in
-greenlet==1.1.2
+greenlet==1.1.3
     # via sqlalchemy
 h5py==2.10.0
     # via -r ./batch/docker/requirements.in
@@ -79,11 +79,11 @@ kiwisolver==1.4.4
     # via matplotlib
 matplotlib==3.3.4
     # via -r ./batch/docker/requirements.in
-mpire==2.4.0
+mpire==2.6.0
     # via -r ./batch/docker/requirements.in
 munch==2.5.0
     # via fiona
-numpy==1.23.1
+numpy==1.23.2
     # via
     #   -r ./batch/docker/requirements.in
     #   h5py
@@ -105,12 +105,14 @@ pillow==9.2.0
     # via matplotlib
 pyasn1==0.4.8
     # via rsa
-pydantic==1.9.1
+pydantic==1.9.2
     # via
     #   -r ./batch/docker/requirements.in
     #   geojson-pydantic
-pygeos==0.12.0
+pygeos==0.13
     # via -r ./batch/docker/requirements.in
+pygments==2.13.0
+    # via mpire
 pyparsing==3.0.9
     # via
     #   matplotlib
@@ -130,11 +132,11 @@ python-dateutil==2.8.2
     #   matplotlib
     #   pandas
     #   pystac
-pytz==2022.1
+pytz==2022.2.1
     # via pandas
 pyyaml==5.4.1
     # via awscli
-rasterio==1.3.0
+rasterio==1.3.2
     # via -r ./batch/docker/requirements.in
 rsa==4.7.2
     # via awscli
@@ -142,15 +144,15 @@ s3transfer==0.6.0
     # via
     #   awscli
     #   boto3
-scipy==1.8.1
+scipy==1.9.1
     # via -r ./batch/docker/requirements.in
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.8.0
+sentry-sdk==1.9.5
     # via
     #   -r ./batch/docker/requirements.in
     #   structlog-sentry
-shapely==1.8.2
+shapely==1.8.4
     # via geopandas
 simplejson==3.17.6
     # via kiwi-structlog-config
@@ -161,11 +163,11 @@ six==1.16.0
     #   jsonschema
     #   munch
     #   python-dateutil
-slack-sdk==3.18.0
+slack-sdk==3.18.1
     # via -r ./batch/docker/requirements.in
 snuggs==1.4.7
     # via rasterio
-sqlalchemy==1.4.39
+sqlalchemy==1.4.40
     # via -r ./batch/docker/requirements.in
 structlog==22.1.0
     # via
@@ -183,7 +185,7 @@ typeguard==2.13.3
     # via tensorflow-addons
 typing-extensions==4.3.0
     # via pydantic
-urllib3==1.26.10
+urllib3==1.26.12
     # via
     #   -r ./batch/docker/requirements.in
     #   botocore
