--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ affine==2.3.1
     # via rasterio
 asn1crypto==1.5.1
     # via scramp
-attrs==21.4.0
+attrs==22.1.0
     # via
     #   fiona
     #   rasterio
@@ -41,19 +41,19 @@ fiona==1.8.21
     # via geopandas
 geojson-pydantic==0.4.3
     # via -r requirements.in
-geopandas==0.11.0
+geopandas==0.11.1
     # via -r requirements.in
-greenlet==1.1.2
+greenlet==1.1.3
     # via sqlalchemy
 h5py==2.10.0
     # via -r requirements.in
 kiwi-structlog-config==0.1.8
     # via -r requirements.in
-mpire==2.4.0
+mpire==2.6.0
     # via -r requirements.in
 munch==2.5.0
     # via fiona
-numpy==1.23.1
+numpy==1.23.2
     # via
     #   h5py
     #   pandas
@@ -65,10 +65,12 @@ pandas==1.4.3
     # via geopandas
 pg8000==1.29.1
     # via -r requirements.in
-pydantic==1.9.1
+pydantic==1.9.2
     # via
     #   -r requirements.in
     #   geojson-pydantic
+pygments==2.13.0
+    # via mpire
 pyparsing==3.0.9
     # via
     #   -r requirements.in
@@ -82,17 +84,17 @@ python-dateutil==2.8.2
     # via
     #   pandas
     #   pystac
-pytz==2022.1
+pytz==2022.2.1
     # via pandas
-rasterio==1.3.0
+rasterio==1.3.2
     # via -r requirements.in
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.8.0
+sentry-sdk==1.9.5
     # via
     #   -r requirements.in
     #   structlog-sentry
-shapely==1.8.2
+shapely==1.8.4
     # via geopandas
 simplejson==3.17.6
     # via kiwi-structlog-config
@@ -101,11 +103,11 @@ six==1.16.0
     #   fiona
     #   h5py
     #   python-dateutil
-slack-sdk==3.18.0
+slack-sdk==3.18.1
     # via -r requirements.in
 snuggs==1.4.7
     # via rasterio
-sqlalchemy==1.4.39
+sqlalchemy==1.4.40
     # via -r requirements.in
 structlog==22.1.0
     # via
@@ -117,7 +119,7 @@ tqdm==4.64.0
     # via mpire
 typing-extensions==4.3.0
     # via pydantic
-urllib3==1.26.10
+urllib3==1.26.12
     # via sentry-sdk
 
 # The following packages are considered to be unsafe in a requirements file:
