--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ h5py==2.10.0
     # via -r requirements.in
 kiwi-structlog-config==0.1.8
     # via -r requirements.in
-mpire==2.6.0
+mpire==2.4.0
     # via -r requirements.in
 munch==2.5.0
     # via fiona
@@ -61,16 +61,14 @@ numpy==1.23.2
     #   snuggs
 packaging==21.3
     # via geopandas
-pandas==1.4.3
+pandas==1.4.4
     # via geopandas
 pg8000==1.29.1
     # via -r requirements.in
-pydantic==1.9.2
+pydantic==1.10.2
     # via
     #   -r requirements.in
     #   geojson-pydantic
-pygments==2.13.0
-    # via mpire
 pyparsing==3.0.9
     # via
     #   -r requirements.in
@@ -90,7 +88,7 @@ rasterio==1.3.2
     # via -r requirements.in
 scramp==1.4.1
     # via pg8000
-sentry-sdk==1.9.5
+sentry-sdk==1.9.8
     # via
     #   -r requirements.in
     #   structlog-sentry
@@ -103,19 +101,20 @@ six==1.16.0
     #   fiona
     #   h5py
     #   python-dateutil
-slack-sdk==3.18.1
+slack-sdk==3.18.3
     # via -r requirements.in
 snuggs==1.4.7
     # via rasterio
-sqlalchemy==1.4.40
+sqlalchemy==1.4.41
     # via -r requirements.in
 structlog==22.1.0
     # via
     #   -r requirements.in
     #   kiwi-structlog-config
-structlog-sentry==1.4.0
+    #   structlog-sentry
+structlog-sentry==2.0.0
     # via -r requirements.in
-tqdm==4.64.0
+tqdm==4.64.1
     # via mpire
 typing-extensions==4.3.0
     # via pydantic
