--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -88,7 +88,7 @@ jobs:
   check_dependencies_change:
     name: Check dependencies change
     runs-on: ubuntu-latest
-    needs: [deploy]
+    needs: [deploy-dev]
     steps:
       - uses: actions/checkout@v3
       - name: Get changed files
